--- a/primeira_prova_CN.ipynb
+++ b/primeira_prova_CN.ipynb
@@ -7,12 +7,12 @@
       "provenance": [],
       "collapsed_sections": [
         "N4paYYw4lDl0",
-        "goC-HAicnBcr",
-        "LSCEs1Wj1ZjC",
-        "SYWuGsZ-5hLO",
-        "SupL4iHCEP4y"
+        "sdCmneE4lKHz",
+        "Tfv8-kpBpYNP",
+        "5OL6k57R0KNo",
+        "LSCEs1Wj1ZjC"
       ],
-      "authorship_tag": "ABX9TyO3vMu/hX6aYYQVqslQUdXN",
+      "authorship_tag": "ABX9TyPSxYsArlveXlE7wjhQN076",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -534,6 +534,10 @@
         "outputId": "90335fcc-88af-4d6f-bfdc-e9c34d8d17b7"
       },
       "source": [
+        "# RODANDO A FUNÇÃO JORDAN PARA O PROBREMA PROPOSTO,\n",
+        "# O VETOR RESULTADO ESTÁ NA ÚLTIMA COLUNA DA MATRIZ,\n",
+        "# POR SIMPLICIDADE PREFIRO O DEIXAR ASSIM.\n",
+        "\n",
         "jordan(\n",
         "        [[8.7 ,  3  ,  9.3 ,  11  ,  16.4 ],\n",
         "        [24.5, -8.8,  11.5,  45.1, -49.7 ],\n",
@@ -600,65 +604,84 @@
         "id": "gfij03WApUzP"
       },
       "source": [
+        "# COMO JACOBI É UM MÉTODO ABERTO OU INTERATIVO, ISSO SE REFLETE EM MAIS\n",
+        "# PARAMETROS PARA FUNÇÃO DENOMINADA DE jacobi\n",
         "def jacobi(hea, ci=[0, 0, 0], ni=100, tc=1e-2, trc=True, permu=True):\n",
         "\n",
+        "    # IMPORTANDO O PACOTE NUMPY (PYTHON NUMÉRICO)\n",
         "    import numpy as np\n",
         "\n",
+        "    # CRIANDO UMA FUNÇÃO PARA TRUNCAR O RESULTADO FINAL, ESTÁ FUNÇÃO\n",
+        "    # ME RETORNA VERDADEIRO SE O ERRO RELÁTIVO FOR ATINGIDO\n",
         "    def trunc(arr1, arr2, tr):\n",
         "        comp = True\n",
         "        for i in range(len(arr1)):\n",
         "            comp *= abs((arr2[i]-arr1[i])/arr1[i]) < tc\n",
         "        return comp\n",
         "\n",
-        "\n",
+        "    # CRIANDO UMA FUNÇÃO DENOMIADA DE v, ESTÁ FUNÇÃO SERÁ CRUCIAL PARA\n",
+        "    # O FUNCIONAMENTO DO MÉTODO\n",
         "    def v(arr, cond, line=0):\n",
-        "        '''\n",
-        "            Retorna uma matriz solução\n",
-        "        '''\n",
         "        \n",
+        "        # CRIANDO UMA MATRIZ DENOMINADA DE max_diagonal, ESTÁ FUNÇÃO JÁ\n",
+        "        # FOI ABRODADA NOS METODOS DIRETOS NA QUESTÃO UM\n",
         "        def max_diagonal(arr):\n",
-        "                \n",
         "            def permutation(arr, shift, end):\n",
         "                arr = np.insert(arr, end, arr[shift], axis=0)\n",
         "                finale = shift + 1 if shift > end else shift \n",
         "                arr = np.delete(arr, finale, axis=0)\n",
         "                return arr \n",
-        "\n",
         "            for i in range(len(arr)):\n",
         "                arr = permutation(\n",
         "                    arr,\n",
         "                    np.where(arr[i:, i] == max(arr[i:, i], key=abs)\n",
         "                    )[0][0] + i,\n",
-        "                    i\n",
-        "                )\n",
+        "                    i)\n",
         "            return arr\n",
         "\n",
+        "        # SE O PARÂMETRO permu FOR DEFINIDO COMO True, RODE O CÓDIGO\n",
+        "        # ABAIXO\n",
         "        if permu:\n",
+        "\n",
+        "            # arr É ATUALIZADO A PONTO DE SE OBTER A MAIOR DIAGONAL\n",
+        "            # POSSÍVEL\n",
         "            arr = max_diagonal(arr)\n",
         "\n",
+        "        # DEFINDO AS VARIÁVEIS n E rs\n",
         "        n, rs = [arr[line][-1]], 0\n",
+        "\n",
+        "        # n RECEBE UMA LISTA DE TERMOS CRIADAS A PARTIR DAD MATRIZ\n",
+        "        # PRINCIPAL\n",
         "        n.append(\n",
         "            [x*i for x, i, c in zip(arr[line], cond, range(len(arr[0])))\n",
         "            if c != line]\n",
         "        )\n",
+        "        \n",
+        "        # RODANDO UM LOOP E FAZENDO k VARRER A LISTA n[1]\n",
         "        for k in n[1]:\n",
         "            rs += k\n",
         "        x = (n[0]-rs)/arr[line][line]\n",
         "\n",
         "        return x\n",
         "\n",
-        "    \n",
+        "    # TRANSFORMANDO A LISTA hea EM UMA MATRIZ DO TIPO ARRAY\n",
         "    ci = [ci]; arr = np.array(hea, dtype=np.float64, copy=True)\n",
         "\n",
+        "    # RODANDO UM LOOP E FAZENDO j VARRER A QUANTIDADE DEFINIDA EM ni\n",
         "    for j in range(ni):\n",
         "        ci.append([])\n",
         "        for i in range(len(arr)):\n",
         "            ci[j+1].append(v(arr, ci[j], line=i))\n",
         "        \n",
+        "        # SE TRC FOR DEFINIDO COMO True, RODE O CÓDIGO ABAIXO.\n",
         "        if trc:\n",
+        "            \n",
+        "            # SE O ERRO DEFIDIDO FOR ATINGIDO, PARE O LOOP \n",
         "            if trunc(ci[j], ci[j+1], tr=tc):\n",
         "                break\n",
         "    \n",
+        "    # AO FINAL DA FUNÇÃO jacobi É RETORNADO UMA LISTA DE LISTA CONTENDO\n",
+        "    # O HISTÓRICO DE INTERAÇÕES E AO FINAL O RESULTADO ESPERADO  \n",
         "    return ci"
       ],
       "execution_count": 74,
@@ -675,8 +698,10 @@
         "outputId": "98806f6e-0a8c-4c24-8e30-eb73474c2d12"
       },
       "source": [
+        "# IMPORTANDO A BIBLIOTECA NUMPY (PYTHON NUMÉRICO)\n",
         "import numpy as np\n",
         "\n",
+        "# IMPRIMINDO A MATRIZ MODIFICADA PELO MÉTODO DE JACOBI\n",
         "print(np.array(jacobi(\n",
         "    [[5 , -1,  2, -1,  5],\n",
         "     [1 ,  9, -3,  4, 26],\n",
@@ -727,8 +752,11 @@
         "id": "6BB8ULBf0RtO"
       },
       "source": [
-        "def gauss_saidel(hea, ci=[0, 0, 0], ni=100, tc=1e-2, trc=True, permu=True):\n",
-        "\n",
+        "# A FUNÇÃO DE GAUSS-SEIDEL É BASTANTE SIMILAR A DE JACOBI, POR ISSO SE\n",
+        "# UTILIZA DA MESMA FUNÇÃO, SALVO APENAS AO FINAL QUE MUDA A FORMA COM\n",
+        "# OS TERMOS VÃO SE RELACIONAR\n",
+        "def gauss_saidel(hea, ci=[0, 0, 0], ni=100, tc=1e-2, trc=True,permu=True):\n",
+        "    \n",
         "    import numpy as np\n",
         "\n",
         "    def trunc(arr1, arr2, tr):\n",
@@ -753,7 +781,8 @@
         "            for i in range(len(arr)):\n",
         "                arr = permutation(\n",
         "                    arr,\n",
-        "                    np.where(arr[i:, i] == max(arr[i:, i], key=abs))[0][0] + i,\n",
+        "                    np.where(arr[i:, i] == max(arr[i:, i], key=abs)\n",
+        "                    )[0][0] + i,\n",
         "                    i\n",
         "                )\n",
         "            return arr\n",
@@ -771,8 +800,12 @@
         "\n",
         "        return x\n",
         "\n",
-        "    \n",
+        "    # AQUI OS VALORES SERÃO ARMAZENADOS EM UMA LISTA E SERÃO USADOS\n",
+        "    # NA MESMA INTERAÇÃO\n",
         "    arr = np.array(hea, dtype=np.float64, copy=True)\n",
+        "    \n",
+        "    # PARA ISSO A VARIÁVEL hist FOI CRIADA E SERÁ RESPOSAVEL POR\n",
+        "    # ARMAZENAR OS VALORES, ENQUANTO arr SERÁ MODIFICADA \n",
         "    hist = np.array([ci], dtype=np.float64, copy=True)\n",
         "\n",
         "    for j in range(1, ni+1):\n",
@@ -781,9 +814,14 @@
         "        \n",
         "        hist = np.append(hist, [ci], axis=0)\n",
         "\n",
+        "        # O TRUNCAMENTO IRÁ FUNCIONAR DA MESMA FORMA, MAS AGORA SERÁ\n",
+        "        # APLICADO A VARIÁVEL hist\n",
         "        if trc:\n",
         "            if trunc(hist[j-1], hist[j], tr=tc):\n",
         "                break\n",
+        "    \n",
+        "    # AO FINAL DO PROGRAMA, hist É RETORNADA PARA QUE OS SEUS VALORES\n",
+        "    # SEJAM ANALIZADOS\n",
         "    return hist"
       ],
       "execution_count": 83,
@@ -800,6 +838,8 @@
         "outputId": "b6cba0b7-263d-41bb-a9b8-0d74fad87321"
       },
       "source": [
+        "# IMPRIMINDO A MATRIZ MODIFICADA PELO MÉTODO DE SAIDEL\n",
+        "\n",
         "print(gauss_saidel(\n",
         "    [[5 , -1,  2, -1,  5],\n",
         "     [1 ,  9, -3,  4, 26],\n",
@@ -905,9 +945,10 @@
         "\n",
         "Nó 4 $\\qquad\\frac{0-V_4}{5}+\\frac{V_3-V_4}{2}+\\frac{V_1-V_4}{2}=0$\n",
         "\n",
+        "\\\\\n",
+        "Após a analise do problema, as seguintes equações foram descorbertas. utilizaremos do método de Seidel para a solução deste sistema.\n",
         "\n",
         "\\\\\n",
-        "\n",
         "\n",
         "$\\begin{array}{l}\n",
         "&-&4V_1&+&2V_2&&&+&2V_4&=&-&100\\\\\n",
@@ -928,7 +969,8 @@
         "outputId": "a9106c0b-0cb2-4e58-bd9e-ad9a5c92a86f"
       },
       "source": [
-        "# SE UTILIZANDO NO METODO DE GAUSS-SEIDEL\n",
+        "# SE UTILIZANDO NO METODO DE GAUSS-SEIDEL, OS VELORES DE V1, V2, V3, V4\n",
+        "# ESTÃO RETORNADOS NA ÚLTIMA COLUNA DA MATRIZ.\n",
         "\n",
         "jordan(\n",
         "    [[-4,  2,  0,   2, -100],\n",
@@ -1002,22 +1044,58 @@
         "id": "MsdKOtgP7JNE"
       },
       "source": [
+        "# CRIANDO UMA FUNÇÃO DENOMINADA DE BISSECÇÃO\n",
         "def bisseccao(a, b, n=100, e=0.001):\n",
-        "\n",
+        "    \n",
+        "    # RODANDO UM LOOP E FAZENDO l VARRER DE 0 À 99 \n",
         "    for l in range(n):\n",
+        "\n",
+        "        # CONDIÇÃO: SE O LOOP RODAR PELA PRIMEIRA VEZ xi RECEBE A,\n",
+        "        # CASO CONTRÁRIO DEVERÁ RECEBER x\n",
         "        xi = a if l == 0 else x\n",
+        "        \n",
+        "        # A CADA NOVA INTERAÇÃO A MEDIA DOS INTERVALOS É RETIRADA\n",
         "        x = (a+b)/2\n",
+        "\n",
+        "        # CONDIÇÃO: SE F(a) ou f(b) for um raiz do problema, a raiz\n",
+        "        # recebe a ou b e para o loop.\n",
+        "        # O LOOP TAMBÉM DEVE PARAR SE O ERRO RELATIVO FOR ALCANÇADO\n",
         "        if f(a) == 0 or f(b) == 0 or abs((xi-x)/x) < e:\n",
         "            raiz = a if f(a) == 0 else raiz\n",
         "            raiz = b if f(b) == 0 else raiz\n",
         "            break\n",
         "\n",
+        "        # CASO CONTRÁRIO, OS INTERVALOS SERÃO ANALIZADOS PELO TEÓREMA\n",
+        "        # DE BOLZANO E a OU b ASSUME O VALOR DE x\n",
         "        else:\n",
         "            a = x if f(x) * f(a) > 0 else a \n",
         "            b = x if f(x) * f(b) > 0 else b\n",
         "            raiz = x\n",
         "\n",
-        "    return (raiz, l, abs((xi-x)/x))"
+        "    # A FUNÇÃO SE ENCERRA, RETORNANDO A RAIZ, O NÚMERO DE LOOP E O\n",
+        "    # ERRO RELÁTIVO\n",
+        "    return (raiz, l, abs((xi-x)/x))\n",
+        "\n",
+        "# ---\n",
+        "\n",
+        "# SEM OS COMENTÁRIOS, A FUNÇÃO TERIA ESSA CARA.\n",
+        "\n",
+        "# def bisseccao(a, b, n=100, e=0.001):\n",
+        "#      \n",
+        "#     for l in range(n):\n",
+        "#         xi = a if l == 0 else x\n",
+        "#         x = (a+b)/2\n",
+        "#         if f(a) == 0 or f(b) == 0 or abs((xi-x)/x) < e:\n",
+        "#             raiz = a if f(a) == 0 else raiz\n",
+        "#             raiz = b if f(b) == 0 else raiz\n",
+        "#             break\n",
+        "# \n",
+        "#         else:\n",
+        "#             a = x if f(x) * f(a) > 0 else a \n",
+        "#             b = x if f(x) * f(b) > 0 else b\n",
+        "#             raiz = x\n",
+        "# \n",
+        "#     return (raiz, l, abs((xi-x)/x))"
       ],
       "execution_count": 102,
       "outputs": []
@@ -1033,10 +1111,13 @@
         "outputId": "1122fc87-7000-4cc7-c6ef-60f18bc927e5"
       },
       "source": [
+        "# IMPORTANDO O NUMPY (PYTHON NUMÉRICO)\n",
         "import numpy as np\n",
         "\n",
+        "# DEFINDO UMA FUNÇÃO f COM A FUNÇÃO DO PROBLEMA\n",
         "f = lambda x: np.sin(x)-np.log(x)\n",
         "\n",
+        "# RETORNANDO APENAS A RAIZ ENCONTRADA\n",
         "bisseccao(1, 3, e=1e-3)[0]"
       ],
       "execution_count": 111,
@@ -1071,10 +1152,16 @@
         "id": "x5wlAfMm92yv"
       },
       "source": [
+        "# CRIANDO A FUNÇÃO PARA O MÉTODO DAS CORDAS, DENOMINADO corda.\n",
+        "# ESTE MÉTODO SEGUE OS MESMOS PASSOS DA FUNÇÃO bisseccao, SALVO APENAS\n",
+        "# EM COMO O x É OBTIDO A CADA NOVA INTERAÇÃO\n",
         "def corda(a, b, n=100, e=0.001):\n",
         "\n",
         "    for l in range(n):    \n",
         "        xi = a if l == 0 else x\n",
+        "\n",
+        "        # NESTE PONTO A FUNÇÃO MUDA E x É OBTIDO DE ACORDO COM A FORMULÁ\n",
+        "        # DO MÉTODO DAS CORDAS\n",
         "        x = a-f(a)*(b-a)/(f(b)-f(a)) \n",
         "\n",
         "        if f(a) == 0 or f(b) == 0 or abs((x-xi)/x) < e:\n",
@@ -1087,7 +1174,29 @@
         "            b = x if f(x) * f(b) > 0 else b\n",
         "            raiz = x\n",
         "\n",
-        "    return (raiz, l, abs((x-xi)/x))"
+        "    return (raiz, l, abs((x-xi)/x))\n",
+        "\n",
+        "# ---\n",
+        "\n",
+        "# SEM OS COMENTÁRIOS, A FUNÇÃO TERIA ESSA CARA.\n",
+        "\n",
+        "# def corda(a, b, n=100, e=0.001):\n",
+        "# \n",
+        "#     for l in range(n):    \n",
+        "#         xi = a if l == 0 else x\n",
+        "#         x = a-f(a)*(b-a)/(f(b)-f(a)) \n",
+        "# \n",
+        "#         if f(a) == 0 or f(b) == 0 or abs((x-xi)/x) < e:\n",
+        "#             raiz = a if f(a) == 0 else raiz\n",
+        "#             raiz = b if f(b) == 0 else raiz\n",
+        "#             break\n",
+        "# \n",
+        "#         else:\n",
+        "#             a = x if f(x) * f(a) > 0 else a \n",
+        "#             b = x if f(x) * f(b) > 0 else b\n",
+        "#             raiz = x\n",
+        "# \n",
+        "#     return (raiz, l, abs((x-xi)/x))"
       ],
       "execution_count": 107,
       "outputs": []
@@ -1103,10 +1212,14 @@
         "outputId": "c18f7d62-33c4-4ad9-ccdd-98a7bc96bfb9"
       },
       "source": [
+        "# IMPORTANDO O NUMPY (PYTHON NUMÉRICO)\n",
         "import numpy as np\n",
         "\n",
+        "# DEFINDO UMA FUNÇÃO f COM A FUNÇÃO DO PROBLEMA\n",
         "f = lambda x: 0.2*x**3-3.006*x**2+15.06*x-25.15\n",
         "\n",
+        "# APLICANDO A FUNÇÃO corda E OBTENDO APENAS A RAIZ DO PROBLEMA\n",
+        "# QUE SE ENCONTRA NO INTERVALO 4 À 7.\n",
         "corda(4, 7,n=1000, e=1e-4)[0]"
       ],
       "execution_count": 116,
@@ -1140,17 +1253,50 @@
         "id": "BcUDv1xz-T_e"
       },
       "source": [
+        "# CRIANDO A FUNÇÃO newton, ESTÁ FUNÇÃO SE UTILIZA DE APENAS UM\n",
+        "# VALOR INÍCIAL\n",
         "def newton(a, n=100, e=0.01):\n",
         "    \n",
+        "    # SE UTILIZANDO DA DERIVAÇÃO NUMÉRICA PARA SE OBTER f'(X)\n",
         "    df = lambda a, h=e:(f(a + h)-f(a-h))/(2*h)\n",
         "\n",
+        "    # RODANDO UM LOOP E FAZENDO i VARRER DE 0 À 99 COMO FOI DEFINIDO\n",
+        "    # NOS PARÂMETROS DA FUNÇÃO\n",
         "    for i in range(n):\n",
+        "\n",
+        "        # CONDIÇÃO: SE ESTIVER NO PRIMEIRO LOOP, x RECEBE a, CASO\n",
+        "        # CONTRÁRIO, x RECEBE UMA APROXIMAÇÃO DA FUNÇÃO PELA SERIE\n",
+        "        # DE TEYLOR TRUNCADA NO SEGUNDO TERMO\n",
         "        x = a if i == 0 else x-f(x)/df(x)\n",
+        "        \n",
+        "        # CONDIÇÃO: SE NÃO FOR A PRIMEIRA VEZ QUE O LOOP RODA\n",
+        "        # ERRO SERÁ DEFINIDO COMO O ERRO RELÁTIVO PEGANDO OS VALORES\n",
+        "        # OBTIDOS, CASO CONTRÁRIO, error RECEBE UM VALOR QUALQUER QUE\n",
+        "        # EU DEFINI COMO 1\n",
         "        error = abs((er-x)/x) if i != 0 else 1; er = x\n",
+        "        \n",
+        "        # SE O ERRO FOR ATINGIDO, O PROGRAMA PARA\n",
         "        if error <= e:\n",
         "            break\n",
-        "    \n",
-        "    return x, i, error"
+        "    # A FUNÇÃO TERMINA, RETORNANDO A RAIZ, O NÚMERO DE LOOPS E O\n",
+        "    # ERRO RELÁTIVO\n",
+        "    return x, i, error\n",
+        "\n",
+        "# ---\n",
+        "\n",
+        "# SEM OS COMENTÁRIOS, A FUNÇÃO TERIA ESSA CARA.\n",
+        "\n",
+        "# def newton(a, n=100, e=0.01):\n",
+        "#     \n",
+        "#     df = lambda a, h=e:(f(a + h)-f(a-h))/(2*h)\n",
+        "# \n",
+        "#     for i in range(n):\n",
+        "#         x = a if i == 0 else x-f(x)/df(x)\n",
+        "#         error = abs((er-x)/x) if i != 0 else 1; er = x\n",
+        "#         if error <= e:\n",
+        "#             break\n",
+        "#     \n",
+        "#     return x, i, error"
       ],
       "execution_count": 127,
       "outputs": []
@@ -1166,10 +1312,13 @@
         "outputId": "dd9f55e5-460a-4eac-9b33-f37ed8526483"
       },
       "source": [
+        "# IMPORTANDO O NUMPY (PYTHON NUMÉRICO)\n",
         "import numpy as np\n",
         "\n",
+        "# DEFINDO UMA FUNÇÃO f COM A FUNÇÃO DO PROBLEMA\n",
         "f = lambda x: x**5-9*x**4+7*x**3+185*x**2-729*x+1040\n",
         "\n",
+        "# RODANDO A FUNÇÃO newton E DEFINDO O ERRO COMO FOI SOLICITADO.\n",
         "newton(0, e=1e-2)"
       ],
       "execution_count": 128,
@@ -1203,6 +1352,7 @@
         "id": "dWk6j3My-Ucf"
       },
       "source": [
+        "# \n",
         "def in_linear(a, n=100, e=0.1):\n",
         "    for l in range(n):\n",
         "        raiz = a if l == 0 else g(raiz)\n",
@@ -1210,7 +1360,20 @@
         "        if error < e:\n",
         "            break\n",
         "        r2 = raiz\n",
-        "    return raiz, l, error"
+        "    return raiz, l, error\n",
+        "\n",
+        "# ---\n",
+        "\n",
+        "# SEM OS COMENTÁRIOS, A FUNÇÃO TERIA ESSA CARA.\n",
+        "\n",
+        "# def in_linear(a, n=100, e=0.1):\n",
+        "#     for l in range(n):\n",
+        "#         raiz = a if l == 0 else g(raiz)\n",
+        "#         error = 1 if l == 0 else abs((r2-raiz)/raiz)\n",
+        "#         if error < e:\n",
+        "#             break\n",
+        "#         r2 = raiz\n",
+        "#     return raiz, l, error"
       ],
       "execution_count": 130,
       "outputs": []
@@ -1226,11 +1389,16 @@
         "outputId": "406bd1ea-588f-4197-edea-ef677f75e7b1"
       },
       "source": [
+        "# IMPORTANDO O NUMPY (PYTHON NUMÉRICO)\n",
         "import numpy as np\n",
         "\n",
+        "# DEFINDO UMA FUNÇÃO f COM A FUNÇÃO DO PROBLEMA\n",
         "f = lambda x: x**3-np.exp(2*x)+3\n",
+        "# DEFININDO UMA FUNÇÃO g COMO ALTERNATIVA A f, ELA FOI OBTIDA APENAS\n",
+        "# ISSOLANDO O x DA EXPONENCIAL\n",
         "g = lambda x: np.log(x**3+3)/2\n",
         "\n",
+        "# RETORNANDO APENAS A RAIZ DO PROBLEMA AO APLICAR A FUNÇÃO in_linear\n",
         "in_linear(0, e=1e-3)[0]"
       ],
       "execution_count": 137,
@@ -1284,6 +1452,17 @@
       ],
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "qSp1cV3EDzjb"
+      },
+      "source": [
+        "# NOTA\n",
+        "\n",
+        "Todas as funções listadas aqui, foram criadas por mim."
+      ]
     }
   ]
 }
