--- a/primeira_prova_CN.ipynb
+++ b/primeira_prova_CN.ipynb
@@ -12,7 +12,7 @@
         "5OL6k57R0KNo",
         "LSCEs1Wj1ZjC"
       ],
-      "authorship_tag": "ABX9TyPSxYsArlveXlE7wjhQN076",
+      "authorship_tag": "ABX9TyPu8o7FKecQiVmbgPF/jKhD",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1352,14 +1352,34 @@
         "id": "dWk6j3My-Ucf"
       },
       "source": [
-        "# \n",
+        "# CRIANDO UMA FUNÇÃO DENOMINADA DE in_linear.\n",
         "def in_linear(a, n=100, e=0.1):\n",
+        "\n",
+        "    # RODANDO UM LOOP E FAZENDO l VARRER DE 0 Á 99, MAS PODE SER\n",
+        "    # MUDADO PASSANDO UM NOVO PARÂMETRO\n",
         "    for l in range(n):\n",
+        "        \n",
+        "        # CONDIÇÃO: SE O LOOP ESTIVER RODDANDO NA PRIMEIRA VEZ,\n",
+        "        # RAIZ RECEBE UMA VALOR QUALQUER DEFINIDO COMO a, CASO\n",
+        "        # CONTRÁRIO, RAIZ RECEBE g(raiz) ONDE g É A FUNÇÃO PASSADA\n",
         "        raiz = a if l == 0 else g(raiz)\n",
+        "        \n",
+        "        # SE O LOOP ESTIVER RODANDO PELA PRIMEIRA VEZ O ERRO VAI\n",
+        "        # RECEBER UM VALOR QUALQUER DEFINIDO COMO INÍCIALMENTE COMO 1,\n",
+        "        # CASO CONTRÁRIO, ELE DEVE RECEBER O ERRO RELÁTIVO A PARTIR DOS\n",
+        "        # PONTOS OBTIDOS\n",
         "        error = 1 if l == 0 else abs((r2-raiz)/raiz)\n",
+        "        \n",
+        "        # SE O ERRO RELÁTIVO FOR ALCANÇADO, O PROGRAMA DEVE PARAR\n",
         "        if error < e:\n",
         "            break\n",
+        "\n",
+        "        # DEFINDO r2 COMO A RAIZ E ELA SERÁ USADA PARA SE OBTER O ERRO\n",
+        "        # RELÁTIVO\n",
         "        r2 = raiz\n",
+        "\n",
+        "    # O PROGRAMA TERMINA RETORNANDO A RAIZ, O NÚMERO DE LOOPS E O ERRO\n",
+        "    # RELÁTIVO.\n",
         "    return raiz, l, error\n",
         "\n",
         "# ---\n",
@@ -1434,24 +1454,67 @@
         "e distantes $(2x)\\:400m$, com flecha $f$ de $100m$, sabendo que\n",
         "\n",
         "\n",
-        "$$L = 2asenh\\frac{x}{a}$$\n",
+        "$$L = 2a\\cdot senh\\left(\\frac{x}{a}\\right)$$\n",
         "\n",
         "\n",
         "Sendo $a$ a raiz da equação\n",
         "\n",
-        "$$a\\left(cosh\\frac{x}{a}-1\\right)-f=0$$"
+        "$$a\\left(cosh\\left(\\frac{x}{a}\\right)-1\\right)-f=0$$"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "-HwpKJF5RmO-"
+      },
+      "source": [
+        "Como:\n",
+        "\n",
+        "$x=200m$\n",
+        "\n",
+        "e \n",
+        "\n",
+        "$f=100m$"
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "QXOIImejgx6d"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "QXOIImejgx6d",
+        "outputId": "96053504-649b-4bf7-d723-b5e5ce862f60"
       },
       "source": [
-        ""
+        "import numpy as np\n",
+        "\n",
+        "f = lambda a: a*(np.cosh(200/a)-1)-100\n",
+        "\n",
+        "newton(100, e=1e-5)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 173,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(214.86403765166057, 6, 1.0096260336646527e-06)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 173
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "2xHxKhGVTMNr"
+      },
+      "source": [
+        "Assim a corda teria aproximadamente 215 metros."
+      ]
     },
     {
       "cell_type": "markdown",
