--- a/primeira_prova_CN.ipynb
+++ b/primeira_prova_CN.ipynb
@@ -6,7 +6,7 @@
       "name": "primeira_prova_CN.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPby8waMCpNrmdVDEX3rfgK",
+      "authorship_tag": "ABX9TyNIIU+Se6zR65UByNb4BPjn",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -211,17 +211,18 @@
         "# \n",
         "#     return arr"
       ],
-      "execution_count": 22,
+      "execution_count": 1,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "3Krv-O9qM8FQ",
-        "outputId": "8fccb199-ac01-4345-e209-ee4d490680d9"
+        "outputId": "4843be38-3bfd-4e60-8a61-9877eee93104"
       },
       "source": [
         "# RODANDO A FUNÇÃO PARA O PROBLEMA PROPOSTO E RETORNANDO A MATRIZ\n",
@@ -236,7 +237,7 @@
         "\n",
         "matriztt"
       ],
-      "execution_count": 23,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -253,7 +254,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 23
+          "execution_count": 2
         }
       ]
     },
@@ -329,17 +330,18 @@
         "#\n",
         "#    return mt"
       ],
-      "execution_count": 24,
+      "execution_count": 3,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "LJY76xChRxCh",
-        "outputId": "50af40e2-ba22-4886-e0ec-25e324ea1f7d"
+        "outputId": "bb725110-a0a7-4063-abf6-f64305d3e372"
       },
       "source": [
         "# PARA VIZUALIXAR O VETOR SOLUÇÃO DA MATRIZ, IMPRIMIMOS NA TELA\n",
@@ -348,7 +350,7 @@
         "\n",
         "print(resultado(matriztt))"
       ],
-      "execution_count": 25,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -512,17 +514,18 @@
         "#             simple(arr)\n",
         "#     return arr"
       ],
-      "execution_count": 26,
+      "execution_count": 5,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "mSmVHy7Blnvp",
-        "outputId": "0aa97d16-a870-4359-d64b-ab01d63a1efc"
+        "outputId": "ad18211a-faf8-42ab-a927-4fdb0f2f591e"
       },
       "source": [
         "# RODANDO A FUNÇÃO JORDAN PARA O PROBREMA PROPOSTO,\n",
@@ -536,7 +539,7 @@
         "        [21  , -81 , -13.2,  21.5, -106.3]]\n",
         ")"
       ],
-      "execution_count": 27,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -549,7 +552,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 27
+          "execution_count": 6
         }
       ]
     },
@@ -675,17 +678,18 @@
         "    # O HISTÓRICO DE INTERAÇÕES E AO FINAL O RESULTADO ESPERADO  \n",
         "    return ci"
       ],
-      "execution_count": 28,
+      "execution_count": 7,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "Czv6q2XbppnP",
-        "outputId": "bcf5688f-d3dd-45bd-9712-3e6331bc1ff4"
+        "outputId": "8c5b4b05-012b-4b4e-e031-75c5ec1e2290"
       },
       "source": [
         "# IMPORTANDO A BIBLIOTECA NUMPY (PYTHON NUMÉRICO)\n",
@@ -701,7 +705,7 @@
         "     tc = 0.01\n",
         ")))"
       ],
-      "execution_count": 29,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
@@ -814,17 +818,18 @@
         "    # SEJAM ANALIZADOS\n",
         "    return hist"
       ],
-      "execution_count": 30,
+      "execution_count": 9,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "k1TcjJ1a0imd",
-        "outputId": "1aa87b10-f247-4226-e3d7-c5a2d33e0210"
+        "outputId": "1819ae1b-eb18-48fe-88f5-87999c248010"
       },
       "source": [
         "# IMPRIMINDO A MATRIZ MODIFICADA PELO MÉTODO DE SAIDEL\n",
@@ -839,7 +844,7 @@
         "\n",
         "))"
       ],
-      "execution_count": 31,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
@@ -951,10 +956,11 @@
       "cell_type": "code",
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "4dSOB5JW5hqr",
-        "outputId": "219894ac-eee8-4ab6-d065-8c243e7c0f6a"
+        "outputId": "56c3c96f-21ca-43c6-86a3-c00e1c9f2136"
       },
       "source": [
         "# SE UTILIZANDO NO METODO DE GAUSS-SEIDEL, OS VELORES DE V1, V2, V3, V4\n",
@@ -967,7 +973,7 @@
         "     [ 5,  0,  5, -12,    0]]\n",
         ")"
       ],
-      "execution_count": 32,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -980,7 +986,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 32
+          "execution_count": 11
         }
       ]
     },
@@ -1085,17 +1091,18 @@
         "# \n",
         "#     return (raiz, l, abs((xi-x)/x))"
       ],
-      "execution_count": 33,
+      "execution_count": 12,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "ib9lOUlw7TIa",
-        "outputId": "abb50406-d8f8-48c8-dafe-a37e63bd273f"
+        "outputId": "03560790-5aa9-4365-8dc0-25fbe5a0f3c6"
       },
       "source": [
         "# IMPORTANDO O NUMPY (PYTHON NUMÉRICO)\n",
@@ -1107,7 +1114,7 @@
         "# RETORNANDO APENAS A RAIZ ENCONTRADA\n",
         "bisseccao(1, 3, e=1e-3)[0]"
       ],
-      "execution_count": 34,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1117,7 +1124,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 34
+          "execution_count": 13
         }
       ]
     },
@@ -1185,17 +1192,18 @@
         "# \n",
         "#     return (raiz, l, abs((x-xi)/x))"
       ],
-      "execution_count": 35,
+      "execution_count": 14,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "RvkOOjoe-WJQ",
-        "outputId": "ecf96cc4-6629-4c9b-ff6e-a2a1d2ec9689"
+        "outputId": "bb35212f-6545-4301-c781-b96ceedb8fe0"
       },
       "source": [
         "# IMPORTANDO O NUMPY (PYTHON NUMÉRICO)\n",
@@ -1208,7 +1216,7 @@
         "# QUE SE ENCONTRA NO INTERVALO 4 À 7.\n",
         "corda(4, 7,n=1000, e=1e-4)[0]"
       ],
-      "execution_count": 36,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1218,7 +1226,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 36
+          "execution_count": 15
         }
       ]
     },
@@ -1284,17 +1292,18 @@
         "#     \n",
         "#     return x, i, error"
       ],
-      "execution_count": 37,
+      "execution_count": 16,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "0xgX3Lf_-Wng",
-        "outputId": "651dbd89-8d33-4bc3-d2fe-45438b111dcf"
+        "outputId": "7e66b867-efd6-4900-f083-0fc61d8b7f98"
       },
       "source": [
         "# IMPORTANDO O NUMPY (PYTHON NUMÉRICO)\n",
@@ -1306,7 +1315,7 @@
         "# RODANDO A FUNÇÃO newton E DEFINDO O ERRO COMO FOI SOLICITADO.\n",
         "newton(0, e=1e-2)"
       ],
-      "execution_count": 38,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1316,7 +1325,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 38
+          "execution_count": 17
         }
       ]
     },
@@ -1380,17 +1389,18 @@
         "#         r2 = raiz\n",
         "#     return raiz, l, error"
       ],
-      "execution_count": 39,
+      "execution_count": 18,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "Nm8mEmIf-W3Q",
-        "outputId": "4ff7c0c3-f9c3-4524-8b8d-ea5c86f52b2a"
+        "outputId": "b88d75df-5988-4ca2-95de-3c5984d5cd11"
       },
       "source": [
         "# IMPORTANDO O NUMPY (PYTHON NUMÉRICO)\n",
@@ -1405,7 +1415,7 @@
         "# RETORNANDO APENAS A RAIZ DO PROBLEMA AO APLICAR A FUNÇÃO in_linear\n",
         "in_linear(0, e=1e-3)[0]"
       ],
-      "execution_count": 40,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1415,7 +1425,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 40
+          "execution_count": 19
         }
       ]
     },
@@ -1465,10 +1475,11 @@
       "cell_type": "code",
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "QXOIImejgx6d",
-        "outputId": "ed3f74a5-5852-4d23-c036-04fee715195a"
+        "outputId": "1e3a97ad-dd3f-4417-9288-fd4aac85b3ea"
       },
       "source": [
         "# IMPORTANDO O PACOTE NUMPY (PYTHON NUMÉRICO)\n",
@@ -1480,7 +1491,7 @@
         "# ENCONTRANDO A RAIZ PELO MÉTODO DE NEWTON, QUE JÁ FOI COMENTADO.\n",
         "newton(100, e=1e-5)"
       ],
-      "execution_count": 41,
+      "execution_count": 20,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1490,7 +1501,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 41
+          "execution_count": 20
         }
       ]
     },
@@ -1500,8 +1511,46 @@
         "id": "2xHxKhGVTMNr"
       },
       "source": [
-        "Assim a corda teria aproximadamente 215 metros."
+        "Assim $L$ será"
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 0
+        },
+        "id": "NDuNGoXZxllo",
+        "outputId": "aac17214-b942-42a3-a3d0-b1366800385e"
+      },
+      "source": [
+        "2*newton(100, e=1e-5)[0]*np.sinh(200/newton(100, e=1e-5)[0])"
+      ],
+      "execution_count": 23,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "460.3164456346076"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 23
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "erkN11xcy8DN"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -1512,7 +1561,7 @@
         },
         "cellView": "form",
         "id": "_JpQk2YIUBFU",
-        "outputId": "878707fd-b594-43b6-84c1-8e3ee92f252d"
+        "outputId": "5b8ccfc5-db2f-4f34-956f-9669207119e2"
       },
       "source": [
         "#@title\n",
@@ -1555,7 +1604,7 @@
         "  </tbody>\n",
         "</table>"
       ],
-      "execution_count": 42,
+      "execution_count": 21,
       "outputs": [
         {
           "output_type": "display_data",
